feat: tutorial 4 - add the use of for loop and repair tutorial 3

--- a/haidokter/src/main/resources/templates/add-obat.html
+++ b/haidokter/src/main/resources/templates/add-obat.html
@@ -5,7 +5,6 @@
     <title>Add Obat</title>
 </head>
 <body>
-<h2 th:text = "'Obat dengan nomor nama ' + ${nama} + ' berhasil ditambahkan.'"></h2>
-<a href = "/resep/viewall">Kembali</a>
+    <h2 th:text = "'Obat dengan nama ' + ${nama} + ' berhasil ditambahkan.'"></h2>
 </body>
 </html>
