--- a/haidokter/src/main/resources/templates/view-resep.html
+++ b/haidokter/src/main/resources/templates/view-resep.html
@@ -12,28 +12,37 @@
     <h3 th:text = "'Nama Pasien: ' + ${resep.namaPasien}"></h3>
     <h3 th:text = "'Catatan: ' + ${resep.catatan}"></h3>
     <td><a th:href = "@{/resep/change/} + ${resep.noResep}">Change Resep</a></td>
+    <td><a th:href = "@{/resep/delete/no-resep/} + ${resep.noResep}">Delete Resep</a></td>
 </section>
 <section>
-    <h2 th:text="${title}"></h2>
-    <div th:if="${listObat != null}">
-        <div th:each="obat : ${listObat}">
-            <h3 th:text="'ID Obat: ' + ${obat.id}"></h3>
-            <h3 th:text="'Nama: ' + ${obat.nama}"></h3>
-
-            <h3 th:if="${obat.bentuk == 0}">Bentuk: Kapsul</h3>
-            <h3 th:if="${obat.bentuk == 1}">Bentuk: Tablet</h3>
-            <h3 th:if="${obat.bentuk == 2}">Bentuk: Sirup</h3>
-
-            <h3 th:text="'Kuantitas: ' + ${obat.kuantitas}"></h3>
-            <a th:href="@{/obat/change/} + ${obat.id}">Change Obat</a>
-            <a th:href="@{/obat/delete/} + ${obat.id}">Delete Obat</a>
-        </div>
-    </div>
-    <div th:unless="${listObat != null}">
-        <h3 th:text="Resep belum memiliki daftar obat"></h3>
-    </div>
-    <br><br>
     <td><a th:href="@{/obat/add/} + ${resep.noResep}">Add Obat</a></td>
+    <table>
+        <thead>
+            <tr>
+                <th>No</th>
+                <th>ID Obat</th>
+                <th>Nama</th>
+                <th>Bentuk</th>
+                <th>Kuantitas</th>
+                <th>Aksi</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="obat, iterationStatus : ${listObat}" th:style="${iterationStatus.even} ? 'font-weight:bold'">
+                <td th:text="${iterationStatus.count}"></td>
+                <td th:text="${obat.id}"></td>
+                <td th:text="${obat.nama}"></td>
+                <td th:if="${obat.bentuk == 0}">Tablet</td>
+                <td th:if="${obat.bentuk == 1}">Kapsul</td>
+                <td th:if="${obat.bentuk == 2}">Sirup</td>
+                <td th:text="${obat.kuantitas}"></td>
+                <td>
+                    <a th:href="@{/obat/change/} + ${obat.id}">Change Obat</a>
+                    <a th:href="@{/obat/delete/} + ${obat.id}">Delete Obat</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </section>
 </body>
 </html>
