--- a/haidokter/src/main/resources/templates/home.html
+++ b/haidokter/src/main/resources/templates/home.html
@@ -3,22 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+    <script
+            src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"
+    ></script>
+    <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 <body>
-<h2>Selamat Datang di HaiDokter!</h2>
-<h3>Tambah Resep</h3>
-<td><a th:href="@{/resep/add}">Tambah Resep</a></td>
-
-<h3>Cari Resep Berdasarkan Nomor Resep</h3>
-
-<form th:action="@{/resep/view}" method="GET">
-    No Resep:<br>
-    <label>
-        <input type="text" name="noResep"/>
-    </label>
-    <button type="submit">Cari</button>
-</form>
-<br>
-<td><a th:href="@{/resep/viewall}">View All</a></td>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand font-weight-bold text-success" href="#">HaiDokter!</a>
+        <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <a class="nav-item nav-link active text-secondary" th:href="@{/}">
+                    Home<span class="sr-only">(current)</span>
+                </a>
+            </ul>
+        </div>
+    </nav>
+    <div class="container-fluid">
+        <h2>Selamat Datang di HaiDokter!</h2>
+        <a th:href="@{/resep/viewall}" class="btn btn-success">Lihat Semua Resep</a>
+        <a th:href="@{/resep/add}" class="btn btn-outline-success">Tambah Resep</a>
+        <hr/>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">Cari Resep Berdasarkan Nomor Resep</div>
+                    <div class="card-body">
+                        <form th:action="@{/resep/view}" method="GET">
+                            <div class="form-row">
+                                <div class="col-10">
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        placeholder="Nomor Resep"
+                                        name="noResep"
+                                        required
+                                    />
+                                </div>
+                                <div class="col">
+                                    <button class="btn btn-success btn-block" type="submit">
+                                        Cari
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
