feat: tutorial 4 - add the use of fragment

--- a/haidokter/src/main/resources/templates/delete-resep.html
+++ b/haidokter/src/main/resources/templates/delete-resep.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Delete Resep</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+    <nav th:replace="fragments/fragment :: navbar"></nav>
     <h3 th:text="'Nomor Resep ' + ${resep.noResep} + ' telah berhasil dihapus'"></h3>
 </body>
 </html>
