--- a/haidokter/src/main/resources/templates/add-resep.html
+++ b/haidokter/src/main/resources/templates/add-resep.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Resep</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+    <nav th:replace="fragments/fragment :: navbar"></nav>
     <h2 th:text = "'Resep dengan nomor resep ' + ${nomorResep} + ' berhasil ditambahkan.'"></h2>
 </body>
 </html>
