--- a/haidokter/src/main/resources/templates/delete-obat.html
+++ b/haidokter/src/main/resources/templates/delete-obat.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Delete Obat</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+    <nav th:replace="fragments/fragment :: navbar"></nav>
     <h3 th:text="'Obat ' + ${obat} + ' telah berhasil dihapus'"></h3>
     <a th:href="@{/}">Home</a>
 </body>
