--- a/haidokter/src/main/resources/templates/error.html
+++ b/haidokter/src/main/resources/templates/error.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Error</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+    <nav th:replace="fragments/fragment :: navbar"></nav>
     <h3>Telah terjadi error!</h3>
     <h4 style="color: darkred" th:text="${msg}"></h4>
     <h3>Segala proses dibatalkan!</h3>
