--- a/haidokter/src/main/resources/templates/form-update-obat.html
+++ b/haidokter/src/main/resources/templates/form-update-obat.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Change Data Obat</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+    <nav th:replace="fragments/fragment :: navbar"></nav>
     <h2>Change Data Obat</h2>
     <form th:action="@{/obat/change}" th:object="${obat}" method="POST">
         <input type="hidden" th:field="*{resepModel}"/>
