--- a/haidokter/src/main/resources/templates/home.html
+++ b/haidokter/src/main/resources/templates/home.html
@@ -3,36 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
-    <script
-            src="https://code.jquery.com/jquery-3.4.1.min.js"
-            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-            crossorigin="anonymous"
-    ></script>
-    <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand font-weight-bold text-success" href="#">HaiDokter!</a>
-        <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <a class="nav-item nav-link active text-secondary" th:href="@{/}">
-                    Home<span class="sr-only">(current)</span>
-                </a>
-            </ul>
-        </div>
-    </nav>
+    <nav th:replace="fragments/fragment :: navbar"></nav>
     <div class="container-fluid">
         <h2>Selamat Datang di HaiDokter!</h2>
         <a th:href="@{/resep/viewall}" class="btn btn-success">Lihat Semua Resep</a>
