--- a/haidokter/src/main/resources/templates/update-resep.html
+++ b/haidokter/src/main/resources/templates/update-resep.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Update Resep</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+    <nav th:replace="fragments/fragment :: navbar"></nav>
     <h1>Resep telah berhasil diupdate!</h1>
     <h2>Informasi Resep</h2>
     <h3 th:text="'Nomor Resep: ' + ${resep.noResep}"></h3>
