--- a/haidokter/src/main/resources/templates/viewall-resep.html
+++ b/haidokter/src/main/resources/templates/viewall-resep.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>View All Resep</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+    <nav th:replace="fragments/fragment :: navbar"></nav>
     <h2>Daftar Seluruh Resep</h2>
     <div th:each = "resep: ${listResep}">
         <h3 th:text = "'Nomor Resep: ' + ${resep.noResep}"></h3>
