--- a/haidokter/src/main/resources/templates/view-resep.html
+++ b/haidokter/src/main/resources/templates/view-resep.html
@@ -8,45 +8,65 @@
 </head>
 <body>
 <nav th:replace="fragments/fragment :: navbar"></nav>
-<section>
-    <h2>Informasi Resep</h2>
-    <h3 th:text = "'Nomor Resep: ' + ${resep.noResep}"></h3>
-    <h3 th:text = "'Nama Dokter: ' + ${resep.namaDokter}"></h3>
-    <h3 th:text = "'Nama Pasien: ' + ${resep.namaPasien}"></h3>
-    <h3 th:text = "'Catatan: ' + ${resep.catatan}"></h3>
-    <td><a th:href = "@{/resep/change/} + ${resep.noResep}">Change Resep</a></td>
-    <td><a th:href = "@{/resep/delete/no-resep/} + ${resep.noResep}">Delete Resep</a></td>
-</section>
-<section>
-    <td><a th:href="@{/obat/add/} + ${resep.noResep}">Add Obat</a></td>
-    <table>
-        <thead>
-            <tr>
-                <th>No</th>
-                <th>ID Obat</th>
-                <th>Nama</th>
-                <th>Bentuk</th>
-                <th>Kuantitas</th>
-                <th>Aksi</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="obat, iterationStatus : ${listObat}" th:style="${iterationStatus.even} ? 'font-weight:bold'">
-                <td th:text="${iterationStatus.count}"></td>
-                <td th:text="${obat.id}"></td>
-                <td th:text="${obat.nama}"></td>
-                <td th:if="${obat.bentuk == 0}">Tablet</td>
-                <td th:if="${obat.bentuk == 1}">Kapsul</td>
-                <td th:if="${obat.bentuk == 2}">Sirup</td>
-                <td th:text="${obat.kuantitas}"></td>
-                <td th:text="${obat.kuantitas <= 5 ? 'Stok hampir habis' : 'Stok masih banyak'}"></td>
-                <td>
-                    <a th:href="@{/obat/change/} + ${obat.id}">Change Obat</a>
-                    <a th:href="@{/obat/delete/} + ${obat.id}">Delete Obat</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</section>
+<div class="container-fluid">
+    <section>
+        <div class="card">
+            <div class="card-header">Informasi Resep</div>
+            <div class="card-body">
+                <p th:text = "'Nomor Resep: ' + ${resep.noResep}"></p>
+                <p th:text = "'Nama Dokter: ' + ${resep.namaDokter}"></p>
+                <p th:text = "'Nama Pasien: ' + ${resep.namaPasien}"></p>
+                <p th:text = "'Catatan: ' + ${resep.catatan}"></p>
+                <div>
+                    <a th:href = "@{/resep/change/} + ${resep.noResep}" class="btn btn-success">Update Resep</a>
+                    <a th:href = "@{/resep/delete/no-resep/} + ${resep.noResep}" class="btn btn-danger">Delete Resep</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h2 th:text="${title}"></h2>
+        <form th:action="@{/obat/delete}" th:object="${resep}" method="POST">
+            <div class="mb-3">
+                <a th:href="@{/obat/add/} + ${resep.noResep}" class="btn btn-success">Add Obat</a>
+                <a th:href="@{/obat/add-multiple/} + ${resep.noResep}" class="btn btn-outline-success">Add Multiple Obat</a>
+                <input type="submit" value="Delete yang dipilih" class="btn btn-danger"/>
+            </div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>No</th>
+                        <th>ID Obat</th>
+                        <th>Nama</th>
+                        <th>Bentuk</th>
+                        <th>Kuantitas</th>
+                        <th>Status stok</th>
+                        <th>Aksi</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="obat, iterationStatus : ${listobat}" th:style="${iterationStatus.even} ? 'font-weight:bold;'">
+                        <td th:text="${iterationStatus.count}"></td>
+                        <td th:text="${obat.id}"></td>
+                        <td th:text="${obat.nama}"></td>
+                        <td th:if="${obat.bentuk == 0}">Tablet</td>
+                        <td th:if="${obat.bentuk == 1}">Kapsul</td>
+                        <td th:if="${obat.bentuk == 2}">Sirup</td>
+                        <td th:text="${obat.kuantitas}"></td>
+                        <td th:text="${obat.kuantitas < 5 ? 'Stok hampir habis' : 'Stok masih banyak'}"></td>
+                        <td>
+                            <a th:href="@{/obat/change/} + ${obat.id}">Change Obat</a>
+                        </td>
+                        <td>
+                            <input type="checkbox" th:field="*{listobat}" th:value="${obat.id}"/>
+                            <label th:for="${#ids.prev('listobat')}">Hapus</label>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </form>
+    </section>
+</div>
 </body>
 </html>
