feat: tutorial 4 - add exercise no.1

--- a/haidokter/src/main/resources/templates/viewall-resep.html
+++ b/haidokter/src/main/resources/templates/viewall-resep.html
@@ -8,13 +8,40 @@
 </head>
 <body>
     <nav th:replace="fragments/fragment :: navbar"></nav>
-    <h2>Daftar Seluruh Resep</h2>
-    <div th:each = "resep: ${listResep}">
-        <h3 th:text = "'Nomor Resep: ' + ${resep.noResep}"></h3>
-        <h3 th:text = "'Nama Dokter: ' + ${resep.namaDokter}"></h3>
-        <h3 th:text = "'Nama Pasien: ' + ${resep.namaPasien}"></h3>
-        <h3 th:text = "'Catatan: ' + ${resep.catatan}"></h3>
-        <hr>
+    <div class="container-fluid">
+        <h2>Daftar Seluruh Resep</h2>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>No</th>
+                <th>Nomor Resep</th>
+                <th>Nama Dokter</th>
+                <th>Nama Pasien</th>
+                <th>Catatan</th>
+                <th>Aksi</th>
+                <th></th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="resep, iterationStatus : ${listResep}" th:style="${iterationStatus.even} ? 'font-weight:bold;'">
+                <td th:text="${iterationStatus.count}"></td>
+                <td th:text="${resep.noResep}"></td>
+                <td th:text="${resep.namaDokter}"></td>
+                <td th:text="${resep.namaPasien}"></td>
+                <td th:text="${resep.catatan}"></td>
+                <td>
+                    <a th:href="@{/resep/view}">View Detail</a>
+                </td>
+                <td>
+                    <a th:href="@{/resep/change/} + ${resep.noResep}">Change Resep</a>
+                </td>
+                <td>
+                    <a th:href="@{/resep/delete/no-resep/} + ${resep.noResep}">Delete Resep</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
