--- a/haidokter/src/main/resources/templates/add-obat.html
+++ b/haidokter/src/main/resources/templates/add-obat.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Obat</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-<h2 th:text = "'Obat dengan nomor nama ' + ${nama} + ' berhasil ditambahkan.'"></h2>
-<a href = "/resep/viewall">Kembali</a>
+    <nav th:replace="fragments/fragment :: navbar"></nav>
+    <h2 th:text = "'Obat dengan nama ' + ${nama} + ' berhasil ditambahkan.'"></h2>
 </body>
 </html>
