--- a/haidokter/src/main/resources/templates/delete-resep.html
+++ b/haidokter/src/main/resources/templates/delete-resep.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add Resep</title>
+    <title>Delete Resep</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
     <nav th:replace="fragments/fragment :: navbar"></nav>
-    <h2 th:text = "'Resep dengan nomor resep ' + ${nomorResep} + ' berhasil ditambahkan.'"></h2>
+    <h3 th:text="'Nomor Resep ' + ${resep.noResep} + ' telah berhasil dihapus'"></h3>
 </body>
 </html>
