--- a/haidokter/src/main/resources/templates/error-handle.html
+++ b/haidokter/src/main/resources/templates/error-handle.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add Resep</title>
+    <title>Error</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
     <nav th:replace="fragments/fragment :: navbar"></nav>
-    <h2 th:text = "'Resep dengan nomor resep ' + ${nomorResep} + ' berhasil ditambahkan.'"></h2>
+    <h3>Telah terjadi error!</h3>
+    <h4 style="color: darkred" th:text="${msg}"></h4>
+    <h3>Segala proses dibatalkan!</h3>
+    <a th:href="@{/}">Home</a>
 </body>
 </html>
