--- a/haidokter/src/main/resources/templates/update-obat.html
+++ b/haidokter/src/main/resources/templates/update-obat.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th = "http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add Resep</title>
+    <title>Change Obat</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
     <nav th:replace="fragments/fragment :: navbar"></nav>
-    <h2 th:text = "'Resep dengan nomor resep ' + ${nomorResep} + ' berhasil ditambahkan.'"></h2>
+    <h2 th:text="'Obat ' + ${obat} + ' berhasil diubah!'"></h2>
+    <a th:href="@{/}">Home</a>
 </body>
 </html>
