--- a/haidokter/src/main/resources/templates/add-multi-obat.html
+++ b/haidokter/src/main/resources/templates/add-multi-obat.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Change Obat</title>
+    <title>Add Obat</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
+
 <body>
-    <nav th:replace="fragments/fragment :: navbar (current='Update Obat')"></nav>
-    <h2 th:text="'Obat ' + ${obat} + ' berhasil diubah!'"></h2>
-    <a th:href="@{/}">Home</a>
+<nav th:replace="fragments/fragment :: navbar"></nav>
+<div class="container-fluid">
+    <h3 th:text="${obatCount} +' Obat telah berhasil dibuat'"></h3>
+
+    <a th:href="@{/}" class="btn btn-success">Home</a>
+</div>
 </body>
 </html>
