--- a/haidokter/src/main/resources/templates/add-obat.html
+++ b/haidokter/src/main/resources/templates/add-obat.html
@@ -7,7 +7,7 @@
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-    <nav th:replace="fragments/fragment :: navbar"></nav>
-    <h2 th:text = "'Obat dengan nama ' + ${nama} + ' berhasil ditambahkan.'"></h2>
+    <nav th:replace="fragments/fragment :: navbar" (current="Add Obat" )></nav>
+    <h2 th:text="'Obat dengan nama ' + ${nama} + ' berhasil ditambahkan.'"></h2>
 </body>
 </html>
