--- a/haidokter/src/main/resources/templates/add-resep.html
+++ b/haidokter/src/main/resources/templates/add-resep.html
@@ -7,7 +7,7 @@
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-    <nav th:replace="fragments/fragment :: navbar"></nav>
-    <h2 th:text = "'Resep dengan nomor resep ' + ${nomorResep} + ' berhasil ditambahkan.'"></h2>
+    <nav th:replace="fragments/fragment :: navbar (current='Add Resep')"></nav>
+    <h2 th:text="'Resep dengan nomor resep ' + ${nomorResep}+ ' berhasil ditambahkan.'"></h2>
 </body>
 </html>
