--- a/haidokter/src/main/resources/templates/delete-obat.html
+++ b/haidokter/src/main/resources/templates/delete-obat.html
@@ -7,7 +7,7 @@
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-    <nav th:replace="fragments/fragment :: navbar"></nav>
+    <nav th:replace="fragments/fragment :: navbar (current='Delete Obat')"></nav>
     <div class="container-fluid">
         <h3 th:text="${obatCount} + ' Obat telah berhasil dihapus'"></h3>
         <a th:href="@{/}">Kembali ke home</a>
