--- a/haidokter/src/main/resources/templates/viewall-resep.html
+++ b/haidokter/src/main/resources/templates/viewall-resep.html
@@ -7,7 +7,7 @@
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-    <nav th:replace="fragments/fragment :: navbar"></nav>
+    <nav th:replace="fragments/fragment :: navbar (current='View All Resep')"></nav>
     <div class="container-fluid">
         <h2>Daftar Seluruh Resep</h2>
         <table class="table">
@@ -18,7 +18,7 @@
                 <th>Nama Dokter</th>
                 <th>Nama Pasien</th>
                 <th>Catatan</th>
-                <th>Aksi</th>
+                <th class="text-center">Aksi</th>
                 <th></th>
                 <th></th>
             </tr>
@@ -30,14 +30,22 @@
                 <td th:text="${resep.namaDokter}"></td>
                 <td th:text="${resep.namaPasien}"></td>
                 <td th:text="${resep.catatan}"></td>
-                <td>
-                    <a th:href="@{/resep/view}">View Detail</a>
-                </td>
-                <td>
-                    <a th:href="@{/resep/change/} + ${resep.noResep}">Change Resep</a>
-                </td>
-                <td>
-                    <a th:href="@{/resep/delete/no-resep/} + ${resep.noResep}">Delete Resep</a>
+                <td class="text-center">
+                    <a
+                            th:href="@{/resep/view(noResep=${resep.noResep})}"
+                            class="btn btn-success"
+                    >Lihat Resep</a
+                    >
+                    <a
+                            th:href="@{/resep/change/} + ${resep.noResep}"
+                            class="btn btn-outline-success"
+                    >Ubah Resep</a
+                    >
+                    <a
+                            th:href="@{/resep/delete/no-resep/} + ${resep.noResep}"
+                            class="btn btn-danger"
+                    >Hapus Resep</a
+                    >
                 </td>
             </tr>
             </tbody>
