--- a/haidokter/src/main/resources/templates/fragments/fragment.html
+++ b/haidokter/src/main/resources/templates/fragments/fragment.html
@@ -37,6 +37,12 @@
                     Home<span class="sr-only">(current)</span>
                 </a>
             </ul>
+            <ul class="navbar-nav">
+                <a href="#" th:text="${current}"></a>
+            </ul>
+            <ul class="navbar-nav pull-right">
+                <a class="nav-item nav-link active" th:href="@{/logout}">Logout</a>
+            </ul>
         </div>
     </nav>
 </body>
