--- a/haidokter/src/main/resources/templates/fragments/fragment.html
+++ b/haidokter/src/main/resources/templates/fragments/fragment.html
@@ -43,6 +43,9 @@
             <ul class="navbar-nav pull-right">
                 <a class="nav-item nav-link active" th:href="@{/logout}">Logout</a>
             </ul>
+            <ul class="navbar-nav pull-right">
+                <a class="nav-item nav-link active" th:href="@{/user/update-password}">Update Password</a>
+            </ul>
         </div>
     </nav>
 </body>
